# goit-pythonweb-hw-06

./: .gitignore  README.md  config.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 040078216a56_init.py  480295556b14_init.py
src/database/: db.py  models.py  my_select.py  seeds.py
